# hva-without-barren-plateaus

./: .gitignore  README.md  requirements.txt
compiled_hva/: .gitignore  CMakeLists.txt  Makefile  setup.py
compiled_hva/hva_xyz/: __init__.py
compiled_hva/python_tests/: test.py
compiled_hva/src/: binding.cpp  hva_xyz.hpp  sample.hpp
compiled_hva/test/: test.cpp
python_src/: README.md  hva_grad_constant_small.py  hva_grad_repeat.py  hva_hei_1d_solve.py  hva_hei_1d_solve_shots.py  hva_hei_2d_solve.py  hva_hei_2d_solve_shots.py  hva_xyz_grad_1d.py  hva_xyz_grad_2d.py  test.py  test_jax.py  utils.py
random_hamiltonian/: CMakeLists.txt  Makefile  README.md
random_hamiltonian/include/: PauliHamiltonian.hpp  RandomPauliHamiltonian.hpp  utils.hpp
random_hamiltonian/src/: binding.cpp  print_generated_random_ham.cpp  random_ham_grad.cpp  random_ham_grad_real.cpp  utils.cpp
random_hamiltonian/tests/: CMakeLists.txt  test_pauli_string.cpp  test_ti_pauli_ham.cpp
